--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "simple-mp3-cutter",
+  "name": "@cooletijdgast/mp3-cutter",
   "version": "1.0.0",
-  "description": "Simple library to cut mp3 files, i did not make this library, I just made a package out of it. Original git; https://github.com/lubenard/simple-mp3-cutter.git",
-  "main": "cutter.js",
+  "description": "Library to cut mp3 files, inspired by https://github.com/lubenard/simple-mp3-cutter.git",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "directories": {
     "lib": "lib"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cooletijdgast/simple-mp3-cutter-package.git"
+    "url": "git+https://github.com/cooletijdgast/mp3-cutter.git"
   },
   "keywords": [
     "mp3 cutter",
@@ -21,7 +27,13 @@
   "author": "Cooletijdgast",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cooletijdgast/simple-mp3-cutter-package/issues"
+    "url": "https://github.com/cooletijdgast/mp3-cutter.git/issues"
   },
-  "homepage": "https://github.com/cooletijdgast/simple-mp3-cutter-package#readme"
+  "homepage": "https://github.com/cooletijdgast/mp3-cutter.git#readme",
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "lamejs": "^1.2.1",
+    "node-lame": "^1.3.2",
+    "typescript": "^5.4.5"
+  }
 }
