--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cooletijdgast/mp3-cutter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Library to cut mp3 files, inspired by https://github.com/lubenard/simple-mp3-cutter.git",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -32,8 +32,9 @@
   "homepage": "https://github.com/cooletijdgast/mp3-cutter.git#readme",
   "devDependencies": {
     "@types/node": "^20.14.2",
-    "lamejs": "^1.2.1",
-    "node-lame": "^1.3.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "node-lame": "^1.3.2"
   }
 }
