--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cooletijdgast/mp3-cutter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Library to cut mp3 files, inspired by https://github.com/lubenard/simple-mp3-cutter.git",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
@@ -31,10 +32,12 @@
   },
   "homepage": "https://github.com/cooletijdgast/mp3-cutter.git#readme",
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.14.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "fluent-ffmpeg": "^2.1.3",
     "node-lame": "^1.3.2"
   }
 }
