--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "fluent-ffmpeg": "^2.1.3",
-    "node-lame": "^1.3.2"
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
